Add get and create intersection endpoint handlers
